# cs-concepts

./: .gitignore  README.md
NumPy/: NumPy.md
languages/python/: README.md  pyproject.toml
languages/python/01_foundations/notes/: 01_python_mindset.md  02_type_system.md  03_functions_deep.md  04_oop_python.md  05_errors.md  06_import_system.md
languages/python/01_foundations/playground/01_type_system/: test_type_system.py  type_system_demo.py
languages/python/01_foundations/playground/02_functions/: functions_demo.py  test_functions.py
languages/python/01_foundations/playground/03_oop/: oop_demo.py  test_oop.py
languages/python/01_foundations/playground/04_errors/: errors_demo.py  test_errors.py
languages/python/01_foundations/questions/: 01_python_mindset_questions.md
languages/python/02_intermediate/notes/: 01_decorators.md  02_context_managers.md  03_iterators_generators.md  04_async_await.md  05_metaclasses.md  06_descriptors.md  07_coroutine_deep.md
languages/python/02_intermediate/playground/01_decorators/: decorators_demo.py  test_decorators.py
languages/python/02_intermediate/playground/02_context_managers/: context_demo.py  test_context.py
languages/python/02_intermediate/playground/03_iterators_generators/: iter_gen_demo.py  test_iter_gen.py
languages/python/03_engineering/notes/: 01_modules_packaging.md  02_testing.md  03_type_hints.md  04_profiling.md
languages/python/04_projects/01_log_analyzer/: pyproject.toml
languages/python/04_projects/notes/: 01_project_brief.md  02_system_design.md  03_integration_testing.md
(+513 files in other folders)
