[project]
name = "python-playground"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.25",
]

[tool.pytest.ini_options]
testpaths = [
    "01_foundations/playground",
    "02_intermediate/playground",
    "03_engineering/playground",
    "04_projects/01_log_analyzer/tests",
]
asyncio_mode = "auto"
