[project]
name = "log-analyzer"
version = "0.1.0"
description = "CLI + API log analysis tool (Python)"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.scripts]
log-analyzer = "log_analyzer.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
